# MockBot

./: MockBot.sh  README  RemoteROS.sh  autostart.txt  install_ros_dev.sh  install_ros_groovy.sh  ros.sh  stack.xml
3rd/: teleop_twist_keyboard.tar.bz2
3rd-party-tools/: .rosinstall  setup.sh
3rd-party-tools/create_autonomy/: .rosinstall  setup.sh
3rd-party-tools/diffdrive/launch/: diffdrive.launch
3rd-party-tools/exploration/: stack.xml
3rd-party-tools/exploration/.svn/: entries
3rd-party-tools/exploration/explore_stage/: explore.launch  move.xml
3rd-party-tools/include/ca_msgs/: Bumper.h  ChargingState.h  Mode.h
3rd-party-tools/lib/ca_driver/: ca_driver
3rd-party-tools/lib/pkgconfig/: ca_description.pc  ca_driver.pc  ca_msgs.pc  ca_tools.pc
3rd-party-tools/roomba_robot-master/: .gitignore  README.md
3rd-party-tools/roomba_robot-master/lse_roomba_navigation/: CMakeLists.txt  package.xml
3rd-party-tools/roomba_robot-master/lse_roomba_tf/: CMakeLists.txt  laser.launch  package.xml
3rd-party-tools/roomba_robot-master/lse_roomba_tf/.svn/: all-wcprops  entries
3rd-party-tools/roomba_robot-master/lse_roomba_tf/.svn/text-base/: CMakeLists.txt.svn-base  mainpage.dox.svn-base  manifest.xml.svn-base
3rd-party-tools/roomba_robot-master/lse_roomba_tf/include/.svn/: all-wcprops  entries
3rd-party-tools/roomba_robot-master/lse_roomba_tf/include/roomba_setup_tf/.svn/: all-wcprops  entries
3rd-party-tools/roomba_robot-master/lse_roomba_tf/src/: tf_broadcaster_laser.cpp  tf_broadcaster_multi.cpp  tf_broadcaster_nose.cpp  tf_broadcaster_sonar.cpp
3rd-party-tools/roomba_robot-master/lse_roomba_tf/src/.svn/: all-wcprops  entries
3rd-party-tools/roomba_robot-master/roomba_bringup/: CMakeLists.txt  package.xml  roomba.rviz  roomba_laser.rviz
3rd-party-tools/roomba_robot-master/roomba_bringup/launch/: roomba_530.launch  roomba_560.launch
3rd-party-tools/roomba_robot-master/roomba_description/: CMakeLists.txt  package.xml  roomba.rviz
3rd-party-tools/roomba_robot-master/roomba_driver/: CMakeLists.txt  package.xml
3rd-party-tools/roomba_robot-master/roomba_driver/src/: OpenInterface.cpp  OpenInterface.h  roomba500_node.cpp
3rd-party-tools/roomba_robot-master/roomba_msgs/: CMakeLists.txt  package.xml
3rd-party-tools/roomba_robot-master/roomba_robot/: CMakeLists.txt  package.xml
3rd-party-tools/roomba_robot-master/roomba_teleop/: CMakeLists.txt  package.xml
3rd-party-tools/roomba_robot-master/roomba_teleop/launch/: interactive_markers_teleop.launch  keyboard_teleop.launch  nunchuk_teleop.launch  wiimote_teleop.launch  xbox360_teleop.launch
3rd-party-tools/roomba_robot-master/roomba_teleop/src/: interactive_markers_teleop.cpp  joystick_teleop.cpp  keyboard_teleop.cpp
3rd-party-tools/teleop_twist_keyboard/: README.txt
3rd/exploration/.svn/: all-wcprops
3rd/exploration/explore_stage/: explore_slam.launch  manifest.xml
Archive/3rd/: exploration-ros-patched.tgz
Archive/3rd/teleop_twist_keyboard/: manifest.xml
Archive/mockbot1/MockBot/: manifest.xml
Archive/mockbot1/MockBotGPS/: mainpage.dox  manifest.xml
Archive/mockbot1/MockBotSerial/: MockBotSerial.pde  TestServo1.sh  mainpage.dox
Archive/mockbot1/MockBotVelocity2Servo/: mainpage.dox  manifest.xml
Archive/mockbot1/launch/: arduino.launch  (+1 more)
Images/: HintermHollen17WorldTrans.xcf
MockBot/: MockBot.sh  mbs.sh  nohup.out
MockBot/launch/: MockBot.launch  MockBot.launch.orig
MockBotMaps/: mainpage.dox  manifest.xml
MockBotSpeech/: mainpage.dox
MockBotTeleopJoystick/: TeleOpJoystick.py  manifest.xml
MockBotURDF/: mainpage.dox
MockBotVelocity2Servo/: MockBotVelocity2Servo.py  manifest.xml
TOOLS/: speedctrl.lua
demo/: rospymata.py
launch/: MockBot.launch  soundplay_node.launch
mockbot/: CMakeLists.txt  package.xml
mockbot/Arduino/: ServoDirect.sh  ServoTest.sh  ros_lib.hydro.tgz
mockbot/html/: setup_html.sh
mockbot/launch/: arduino_s12.launch  brickpi.launch  freenect_mjpegserver_depth2laserscan.launch  freenect_mjpegserver_depth2laserscan_rosbridge.launch  freenectwebvideobridge.launch  gmapping.launch  m17_mockbot_in_stage.launch  map.yaml  mbt.launch  minimal.launch  mockbot-create.launch  mockbot-pydrive.launch  mockbot.launch  mockbot12v.launch  mockbot2.launch  mockbotsimple.launch  nmea.launch  publisher.launch  r.launch  r200.launch  roomba.launch  roomba_bringup.launch  rosbridge.launch  rtabmap-vis-odom.launch  stage_simulator.launch  stage_simulator_circle.launch  stage_simulator_square.launch  stage_simulator_store.launch  stage_simulator_xlbs.launch  start.launch  startup.launch  t.launch  test.launch
mockbot/patches/: 99-usb-serial.rules  groupAdd.sh  triggerRules.sh
mockbot/simulator/: circle.world  m17-outdoor-stage.sh  m17-outdoor.world  m17-outdoor.yaml  mockbot.world  square.world  store.world  store_xlbs.world
mockbot/tools/: speedctrl.lua
mockbot/urdf/: addons.urdf.xacro  materials.urdf.xacro  mockbot.urdf  mockbot.urdf.xacro  mockturtlebot.gv  mockturtlebot.urdf  mockturtlebot.urdf.xacro  r200.urdf.xacro  realsense_camera.urdf.xacro  wheel.urdf.xacro  wheel.urdf.xacro.bak  xurdf.sh
mockbot1/MockBot/: mainpage.dox
mockbot1/MockBotKinect/: mainpage.dox  manifest.xml
mockbot1/MockBotSerial/: MockBotSerialNode.sh  manifest.xml
mockbot1/MockBotSpeech/: manifest.xml
mockbot1/MockBotTeleopJoystick/: TeleOpJoystick.py  mainpage.dox  manifest.xml
mockbot1/MockBotURDF/: MockBot.urdf  manifest.xml  show_urdf.sh
mockbot2/: CMakeLists.txt  mockbot2.sh  package.xml  sabbel.sh
mockbot2/html/: setup_html.sh
mockbot2/launch/: arduino.launch  headless_rgbdslam.launch  mockbot2.launch  mockbot2sim.launch  publisher.launch  rgbdslam.launch  rosbridge.launch  stage_simulator.launch  stage_simulator_store.launch  wander_stage.launch
mockbot2/patches/: 99-usb-serial.rules  alsa-base.conf
mockbot2/simulator/: MockBotWorld.xcf  circle.world  mockbot.world  mockbotmockbot.world  stage_mockbot.sh
mockbot2/tools/: get_selections  mockbot2.sh  ros-groovy-selections  sabbel.sh  saytime.sh  ubuntu-selections
mockbot2/urdf/: mockbot.urdf  xurdf.sh
(+160 files in other folders)
