<?xml version="1.0"?>
<package>
  <name>roomba_bringup</name>
  <version>0.0.0</version>
  <description>The roomba_bringup package</description>

  <maintainer email="goncabrita@gmail.com">Gonçalo Cabrita</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roomba_bringup</url>

  <author email="goncabrita@gmail.com">Gonçalo Cabrita</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roomba_driver</run_depend>

</package>