<?xml version="1.0"?>
<package>
  <name>roomba_robot</name>
  <version>0.0.0</version>
  <description>The roomba_robot metapackage</description>

  <maintainer email="goncabrita@gmail.com">Gonçalo Cabrita</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roomba_robot</url>

  <author email="goncabrita@gmail.com">Gonçalo Cabrita</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roomba_bringup</run_depend>
  <run_depend>roomba_description</run_depend>
  <run_depend>roomba_driver</run_depend>
  <run_depend>roomba_msgs</run_depend>
  <run_depend>roomba_stage</run_depend>
  <run_depend>roomba_teleop</run_depend>

  <export>
    <metapackage/>
  </export>
</package>