<?xml version="1.0"?>
<package>
  <name>roomba_teleop</name>
  <version>0.0.0</version>
  <description>The roomba_teleop package</description>

  <maintainer email="goncabrita@gmail.com">Gonçalo Cabrita</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roomba_teleop</url>

  <author email="goncabrita@gmail.com">Gonçalo Cabrita</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>